--- a/Con2/style1.css
+++ b/Con2/style1.css
@@ -190,6 +190,7 @@
     background-repeat: no-repeat;
     color: #fff;
 
+
 }
 
 #hrline{
@@ -224,6 +225,7 @@
     margin-left: auto;
     padding-right: 15px;
     padding-left: 15px;
+
 
 }
 
@@ -592,6 +594,12 @@ h4{
 .image{
     display: flex;
     
-}    
+}   
 
-
+p.maintext1{
+    font-family: Raleway, sans-serif ;
+    font-size: 12px;
+    letter-spacing: 1.5px;
+    font-weight: normal;
+    
+}
